# ADAPT-GPM2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: clang_macos.yml  gcc_ubuntu.yml  msvc.yml
ADAPT/CUF/: Any.h  Exception.h  Format.h  Function.h  Generics.h  KeywordArgs.h  Macro.h  Matrix.h  StaticAny.h  Switch.h  Template.h  Variant.h
ADAPT/GPM2/: GPMArrayData.h  GPMCanvas.h  GPMCore.h
examples/: CMakeLists.txt  example_2d.cpp  example_2d.h  example_colormap.cpp  example_colormap.h  example_datetime.h  example_filledcurve.cpp  example_filledcurve.h  example_for_loop.h  example_string.h  main.cpp
